Feat: Favicon fix + added icon + css update

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,6 +3,7 @@
   --font-playfair: 'Playfair Display', serif;
   
   --foreground: #4a3728;
+  --title-color: #191919;
   --background: #fff8f6;
   --border: #f5e4df;
   --accent: #d2a69b;
